--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -125,7 +125,7 @@
     display: block;
     background-color: #fff;
     bottom: -16px;
-    left: 50%;
+  //  left: 50%;
     margin-left: -32px;
     padding: 0 12px;
 	margin-bottom:10px;
