--- a/app/views/products/details.html.erb
+++ b/app/views/products/details.html.erb
@@ -1,3 +1,4 @@
+
 <html>
 <head>
  <title>Bootstrap Case</title>
@@ -6,6 +7,14 @@
 
 </head>
 <body>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=1397110283902092";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 	  <header id="tc_header" class="">
     <div id="branding_bar" class="row">
 		<div id="branding " class="col-md-3 col-sm-3 col-xs-3">
@@ -171,11 +180,11 @@
 	<div class="col-lg-12 tag-detail"> 
 		<span>Từ khóa bài viết</span>
         <h2>
-			<a href="#">altis</a>,
-            <a href="#">toyota-altis</a>,
-            <a href="#">altis-1.8</a>,
-            <a href="#">gia-xe-altis</a>,
-            <a href="#">gia-oto-altis</a>,
+       <%a = @arrtag.count%>
+        	<%for i in (0..a)%>
+        		<a href="<%=URI.parse(request.fullpath).host%>/products/tag?utf8=%E2%9C%93&search=<%=@arrtag[i]%> "><%=@arrtag[i]%></a>
+        	<%end%>
+           
         </h2>
     </div>
     <div class="col-lg-12 tag-detail"> 
@@ -288,12 +297,5 @@
 </div>
   
 </body>
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=1397110283902092";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+
 </html>
