--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,3 @@
-
 <html>
 <head>
  <title>Bootstrap Case</title>
@@ -76,36 +75,14 @@
 	<div class="panel">
                   
                     <div class="panel-body">
-                        <form class="form-inline" role="form">
-                            <div class="form-group col-md-3	">
-                                <select class="form-control">
-									<option>Select a Make</option>
-									<option>2</option>
-									<option>3</option>
-									<option>4</option>
-									<option>5</option>
-								</select>
-                            </div>
-                            <div class="form-group col-md-3">
-                               <select class="form-control">
-									<option>Select a Model</option>
-									<option>2</option>
-									<option>3</option>
-									<option>4</option>
-									<option>5</option>
-								</select>
-                            </div>
-							<div class="form-group col-md-3">
-                               <select class="form-control">
-									<option>Select a Year</option>
-									<option>2</option>
-									<option>3</option>
-									<option>4</option>
-									<option>5</option>
-								</select>
-                            </div>
-                            <button type="submit" class=" btn-submit col-md-3 btn-u btn-u-default">Search</button>
-                        </form>
+                        
+                           <%= form_tag search_products_path, method: :get,class:"", role: "search" do %>
+<p>
+	<%= text_field_tag :search, params[:search], class:"form-control searchf col-md-3"%>
+	<%= submit_tag "search", name: nil, class: "btn btnf col-md-3 btn-u-default btn-submit" %>
+</p>
+<% end %>
+  
                     </div>
                 </div>
 	</div>
@@ -579,12 +556,7 @@
 		
 		
 	</div>
-<%= form_tag search_products_path, method: :get,class:"", role: "search" do %>
-<p>
-	<%= text_field_tag :search, params[:search], class:"form-control"%>
-	<%= submit_tag "search", name: nil, class: "btn btn-u-default" %>
-</p>
-<% end %>
+
 
 </div>
 </div>
