--- a/app/views/products/details.html.erb
+++ b/app/views/products/details.html.erb
@@ -19,7 +19,7 @@
     <div id="branding_bar" class="row">
 		<div id="branding " class="col-md-3 col-sm-3 col-xs-3">
 			<div id="logo_head" class="cf">
-				<a href="/" class="logo fn url" ><img class="img-responsive" src="img/logo.png"></a>
+				<a href="/" class="logo fn url" ><%=image_tag("logo.png", class: "img-responsive")%></a>
 			</div>
 		</div>
     
@@ -230,20 +230,15 @@
 			 <h3>Tin tức nổi bật</h3>
 		  </div>
 		  <div class="main-box">
-			 <ul class="menu2">
-							<li><a href="#">Thị trường ô tô Việt nam 2015</a></br>
-				   <span>20/5/2015</span>
-				</li>
-							<li><a href="#">Thị trường ô tô Việt nam 2014</a></br>
-				   <span>20/5/2015</span>
-				</li>
-							<li><a href="#">Bản tin VAMA và thị trường ô tô Việt nam năm 2013</a></br>
-				   <span>20/5/2015</span>
-				</li>
-							<li><a href="#">Hỗ trợ tài chính</a></br>
-				   <span>20/5/2015</span>
-				</li>
-			</ul>
+			  <ul class="menu2">
+				 <%  @feature.each do |product| %>
+                    <li>
+                    
+                    	<%=link_to product.name, details_path(product)%>
+
+                    </li>		
+                    <% end %>			
+                </ul>
 		  </div>
 		</div>
 		
