--- a/app/views/products/tag.html.erb
+++ b/app/views/products/tag.html.erb
@@ -9,7 +9,7 @@
     <div id="branding_bar" class="row">
     <div id="branding " class="col-md-3 col-sm-3 col-xs-3">
       <div id="logo_head" class="cf">
-        <a href="/" class="logo fn url" ><img class="img-responsive" src="img/logo.png"></a>
+        <a href="/" class="logo fn url" ><%=image_tag("logo.png", class: "img-responsive")%></a>
       </div>
     </div>
     
