--- a/app/views/products/details.html.erb
+++ b/app/views/products/details.html.erb
@@ -132,7 +132,7 @@
 
             <li> <h2><%=@products.name%></h2></li>
             <li><strong>Giá</strong> <span><%= @products.price %></span> VNĐ</li>
-
+            <li><strong>Luot view</strong> <span><%= @products.views_count%></span></li>
         </ul>
     </div>
 
